<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.yordan.popularmovies.DetailMovieActivity">

     <ImageView
        android:id="@+id/iv_detail_poster_back"
        android:scaleType="centerCrop"
        android:layout_width="0dp"
        android:elevation="4dp"
        android:contentDescription="@string/movie_poster_back_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_height="160dp" />

    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:contentDescription="@string/label_favorite_content_description"
        android:elevation="4dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="${originalTitle}"
        android:layout_height="0dp"
        android:background="@drawable/gradient"
        android:id="@+id/tv_movie_title"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        android:elevation="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_width="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_poster_back"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_poster_back"
        android:gravity="bottom|start" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_poster_back"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/sv_inner_movie_detail">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/inner_detail_movie" />
            <include layout="@layout/video_section" />
            <include layout="@layout/reviews_section" />
        </LinearLayout>


    </ScrollView>

    <ImageButton
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:id="@+id/ib_reload"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_refresh_white_24dp"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/reload_results"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb_loading"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
