<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="${tagline}"
        android:layout_height="wrap_content"
        android:id="@+id/tv_tagline"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/iv_detail_poster"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp" />

    <!--<ImageView
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/iv_detail_poster"
        android:contentDescription="@string/movie_poster_desc"
        android:layout_width="190dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/tv_synopsis"
        android:layout_marginBottom="16dp" />-->
    <ImageView
        android:layout_height="wrap_content"
        android:id="@+id/iv_detail_poster"
        android:contentDescription="@string/movie_poster_desc"
        android:layout_width="190dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/tv_synopsis"
        android:layout_marginBottom="16dp" />

    <TextView
        android:text="@string/rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rating_title"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_poster"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_detail_poster" />

    <TextView
        android:text="${voteAverage}"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_user_rating"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating_title"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_detail_poster" />

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textStyle="bold"
        android:id="@+id/tv_duration_title"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_width="0dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_rating"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_detail_poster" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_duration"
        android:text="${duration}"
        android:paddingTop="2dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_duration_title"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_detail_poster" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:textStyle="bold"
        android:id="@+id/tv_release_date_title"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_duration"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_detail_poster" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_release_date"
        android:text="${releaseDate}"
        android:paddingTop="2dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date_title"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_detail_poster" />

    <TextView
        android:text="${synopsis}"
        android:layout_height="wrap_content"
        android:id="@+id/tv_synopsis"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_horizontal"
        android:layout_marginTop="8dp"
        android:textSize="18sp"/>

    <!--<android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/gl_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="342dp"
        app:layout_constraintGuide_percent="0.5" />-->

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/gl_horizontal"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="251dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_begin="251dp" />
</android.support.constraint.ConstraintLayout>